--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -11,7 +11,7 @@
 .box {
 	width: 70%;
 	margin: 0 auto;
-	margin-bottom: 200px;
+	margin-bottom: 100px;
 }
 
 .title {
@@ -23,7 +23,7 @@
 
 .skillContainer {
 	width: 100%;
-	height: 350px;
+	height: 550px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
@@ -39,10 +39,39 @@
 	border-radius: 50px;
 	text-align: center;
 	margin: 15px 15px;
-	padding: 13px;
+	padding: 4px 15px;
 	cursor: pointer;
 	opacity: 0.2;
 	list-style: none;
+}
+
+.skillbox {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: auto;
+	height: 40px;
+}
+
+.imgbox {
+	border: 1.5px solid silver;
+	border-radius: 50px;
+	padding: 1px;
+	padding-top: 5px;
+	width: 40px;
+	height: 40px;
+}
+
+.skillimage {
+	width: 28px;
+	height: 28px;
+	object-fit: contain;	
+}
+
+.skill {
+	font-size: 15px;
+	font-weight: bold;
+	margin-left: 10px;
 }
 
 .choice {
@@ -56,14 +85,16 @@
 
 #reset {
 	width: 100px;
-	height: 30px;
+	height: 35px;
 	display: inline-block;
-	border: 2px solid silver;
+	border: 2px solid black;
 	border-radius: 50px;
-	padding-left: 4px;
-	padding-top: 2px;
+	padding-left: 8px;
+	padding-top: 6px;
 	float: right;
 	cursor: pointer;
+	color: white;
+	background-color: black;
 }
 
 #skillChoiceContainer {
@@ -113,16 +144,22 @@
 	<div th:replace="~{header :: header}"></div>
 	<div class="box">
 		<div>
-			<h1 class="title">프로젝트 인원 모집하기</h1>
-		</div>
-		<div>
-			<h3 class="choiceSkill">관심 있는 기술을 선택해주세요.</h3>
-			<div id="reset">필터 초기화</div>
+			<h1 class="title">프로젝트(스터디) 게시판</h1>
 		</div>
 		<div>
 			<ul class="skillContainer">
-				<li th:each="val : ${skillList}" th:text="${val.skillname}" class="skillList choice"></li>
+				<li th:each="val : ${skillList}" class="skillList choice">
+					<div class="skillbox">
+						<div class="imgbox inline-block">
+							<img class="skillimage" th:src="${val.skillimage}"/>
+						</div>
+						<span class="skill" th:text="${val.skillname}"></span>
+					</div>
+				</li>
 			</ul>				
+		</div>
+		<div>
+			<div id="reset">필터 초기화</div>
 		</div>	
 	</div>	
 	
@@ -136,13 +173,14 @@ let scrollCnt = 1;
 
 // 스크롤 이벤트 
 window.onscroll = function (e) {
-    if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
-      setTimeout(function () {
-    	scrollCnt++;
-    	boardBoxScroll(scrollCnt, 30, selectArry);
-      }, 500);
-    }
-  };
+	if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
+		setTimeout(function () {
+    		// 스크롤 최하단 이동시 1증가(페이지 1증가)
+			scrollCnt++;
+			boardBoxScroll(scrollCnt, 30, selectArry);
+		}, 500);
+	}
+};
 
 // 필터를 몇번 선택했는지 확인 (선택 횟수에 따라 html 태그 배치가 달라짐)
 let pageCnt = 0;
@@ -150,10 +188,14 @@ let pageCnt = 0;
 // 선택된 필터 요소를 담아둘 리스트 선언
 let selectArry = [];
 
+// 스크롤 이벤트에 의한 게시글 리스트를 가져올 함수
 function boardBoxScroll(pageNum, amount, selectArry) {
+	// pageNum : 가져올 페이지, amount : 한 페이지에 게시글 개수(현재는 30개), selectArry : 필터에서 선택된 요소
 	let json = {"pageNum":pageNum, "amount":amount, "selectArry":selectArry};
 	let boardItemTag = document.querySelector(".boardItem");
+	// 필터에서 선택된 요소가 없다면 'nothing' 값이 배열에 저장됨
 	if(selectArry[0] == null) selectArry[0] = "nothing";
+	console.log("selectArry 확인 스크롤 이벤트: " + selectArry);
     $.ajax({
         type: "POST",
         url: "/board/getScroll",
@@ -161,6 +203,7 @@ function boardBoxScroll(pageNum, amount, selectArry) {
 		contentType: "application/json"
     })
         .done(function (result) {
+        	// replaceWith함수를 통해 새로운 데이터를 가져올때마다 태그를 교체해 줄 예정
             $(".boardNull").remove();
             $(".boardItem").append("<div class=boardScroll></div>");
             $(".boardScroll").replaceWith(result);
@@ -176,7 +219,9 @@ function boardBoxScroll(pageNum, amount, selectArry) {
         })
 }
 
+// 페이지에 처음 접속할 때 게시글 30개를 로딩할 함수
 function boardBox(selectArry) {
+	console.log("selectArry 확인 페이지 처음 접속: " + selectArry);
 	let json = {"selectArry":selectArry};
     $.ajax({
         type: "POST",
@@ -185,14 +230,11 @@ function boardBox(selectArry) {
 		contentType: "application/json"
     })
         .done(function (result) {
-            console.log(result);
-            if(pageCnt==0){   
-            	console.log("처음 접속");
+            if(pageCnt==0){
 	            $(".section").append("<div class=boardBox></div>");
 	            $(".boardBox").replaceWith(result);
 	            pageCnt++;
             } else {
-            	console.log("필터를 클릭");
             	$(".boardBlock").remove();
 	            $(".section").append("<div class=boardBox></div>");
 	            $(".boardBox").replaceWith(result);
@@ -210,6 +252,7 @@ function boardBox(selectArry) {
 setTimeout(boardBox, 100);
 
 let skillList = document.getElementsByClassName("skillList");
+let skill = document.getElementsByClassName("skill");
 let skillChoiceContainer = document.getElementById("skillChoiceContainer");
 let reset = document.getElementById("reset");
 
@@ -222,6 +265,8 @@ let check = 0;
 // for문을 통해 필터를 모두 확인
 for(let i=0; i<skillList.length; i++){
 	skillList[i].onclick = function () {
+		console.log("selectArry 확인 필터: " + selectArry);
+		console.log("필터 cnt 확인 " + cnt);
 		// 만약 처음 필터를 선택한 것이라면 (cnt가 0 이라면)
 		if(cnt == 0){
 			selectArry.shift();
@@ -232,8 +277,7 @@ for(let i=0; i<skillList.length; i++){
 					skillList[j].classList.remove("choice");
 				}
 			}
-			selectArry.push(skillList[i].innerHTML);
-			console.log("selectArry 값 서버에 보내기 전 확인해보기 : "+selectArry);	
+			selectArry.push(skill[i].innerHTML);	
 
 			// 서버에 데이터 전달
 			boardBox(selectArry);
@@ -243,16 +287,23 @@ for(let i=0; i<skillList.length; i++){
 		} else if(!skillList[i].classList.contains("choice")){
 			// choice 클래스를 포함해 줌
 			skillList[i].classList += " choice";
-			selectArry.push(skillList[i].innerHTML);
-			
-			console.log("selectArry 값 서버에 보내기 전 확인해보기 : "+selectArry);
+			selectArry.push(skill[i].innerHTML);
 			
 			// 서버에 데이터 전달
 			boardBox(selectArry);
 			scrollCnt = 1;
-			
+			cnt++;
 		// 만약 선택된 요소에 choice 클래스가 포함되어 있다면 
 		} else if(skillList[i].classList.contains("choice")){
+			if(cnt == 1) {
+					skillList[i].classList.remove("choice");
+				for(let i=0; i<skillList.length; i++) {					
+					skillList[i].classList += " choice";
+				}
+				cnt = 0;
+				return;
+			}
+			cnt--;
 			// choice 클래스를 제거해 줌
 			skillList[i].classList.remove("choice");
 //			let removeHidden = document.querySelector("input[value='"+skillList[i].innerHTML+"']");
@@ -260,21 +311,21 @@ for(let i=0; i<skillList.length; i++){
 			
 			// 체크 해제한 요소와 같은 값을 가지고 있는 배열의 값을 제거함
 			let isEven = function(value){
-				return value != skillList[i].innerHTML;
+				return value != skill[i].innerHTML;
 			}
 		
 			selectArry = selectArry.filter(isEven);
-			console.log("selectArry 값 서버에 보내기 전 확인해보기(요소 하나 체크 해제함) : "+selectArry);
 			
 			// choice 클래스 제거 후 모든 요소를 돌아봄
 			for(let j=0; j<skillList.length; j++){
 				// 만약 choice 클래스를 가진 요소가 없다면
-				console.log("선택된 요소에 choice 클래스가 없음");
 				if(!skillList[j].classList.contains("choice")){
+				console.log("선택된 요소에 choice 클래스가 없음");
 					// check 1 증가
 					check++;
 				// 만약 choice 클래스를 가진 요소가 있다면
 				} else {
+				console.log("선택된 요소에 choice 클래스가 있음");
 					boardBox(selectArry);
 					scrollCnt = 1;
 					return;
@@ -293,7 +344,6 @@ for(let i=0; i<skillList.length; i++){
 				console.log("카운트 0으로 초기화");
 				selectArry = [];
 				selectArry[0] = "nothing";
-				console.log("selectArry 값 서버에 보내기 전 확인해보기 : "+selectArry);
 				boardBox(selectArry);
 				scrollCnt = 1;
 			}			
@@ -301,6 +351,7 @@ for(let i=0; i<skillList.length; i++){
 	};
 }
 
+// 필터 초기화 버튼을 누르면 선택된 필터가 모두 초기화 됨
 reset.addEventListener('click', function(){
 	cnt = 0;
 	check = 0;
