--- a/src/main/resources/templates/board/boardWrite.html
+++ b/src/main/resources/templates/board/boardWrite.html
@@ -50,6 +50,12 @@
 		margin: 5px;
 	}
 	
+	.notice {
+		color: red;
+		font-weight: bold;
+		margin-left: 5px;
+	}
+	
 	.date, .add {
 		width: 100%;
 		height: 50px;
@@ -99,6 +105,10 @@
 	
 	.buttonbox {
 		width: 100%;
+	}
+	
+	.submit {
+		float: right;
 	}
 	
 	#boardway::placeholder {
@@ -195,7 +205,8 @@
 					</div>
 				
 					<div class="inline-block">
-						<span class="ex block" id="comu">오픈 채팅방 주소를 입력해주세요.</span>
+						<span class="ex inline-block" id="comu">오픈 채팅방 주소를 입력해주세요.</span>
+						<span class="notice">정확히 작성!!</span>
 						<input class="add block" placeholder=" ex) https://open.kakao.com/123123" type="text" id="boardway" name="boardway" th:field="*{boardway}"/>
 					</div>
 				</div>
@@ -217,7 +228,7 @@
 			      	</div>
 			      	<div class="buttonbox">
 				      	<input type="hidden" id="boardcontent" name="boardcontent"/>
-				     	<input class="button btn-gradient" type="submit" value="등록"/>
+				     	<input class="button btn-gradient submit" type="submit" value="등록"/>
 			     	</div>
 		     	</div>
 	     	</div>
